# ChangeLog for games-engines/instead
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Sep 2009; A.C.Heron <acheron@front.ru> +instead-0.9.ebuild,
  +metadata.xml:
  New Ebuild for bug 285086
