@@ -1,4 +1,5 @@
 DIST instead_0.9.tar.gz 7957190 RMD160 f390e0a08f50a78e7a64c3c337a99b6ce2bb039c SHA1 a59c03c768dd379fb382c1125d184577c3729375 SHA256 75dd99bebc92008559fee959340a5be79de783c477a5f7391e8054b74e44005a
 EBUILD instead-0.9.ebuild 990 RMD160 cedb5adf099a4ab6a170aa33e88d1a2aa5f645f5 SHA1 a59660f69166d2869d16c4d9c67320cea836f879 SHA256 79b3d54de7d9da523e0230cb79c8b1b0640254eb0f4937d120591dba598b6eac
-MISC ChangeLog 233 RMD160 50f7ae5daa04b490f34c48c557a4b7536dbee55a SHA1 ceca50c528ed7b787e930ee9eecf9cf55075be15 SHA256 1cd4e14e061ab6a84bb44b41f70740b267fc6d64f36cc2b6cbd0ae0a377b7025
+EBUILD instead-9999.ebuild 1014 RMD160 98a14729a1a2babf1239259281da7dc25114270d SHA1 ca807c29c933058f70dc2496bf89f953260ba9ee SHA256 fb3e8f748d11e3e85acfae690eb59c799c2f52adb00e967e4d0a63f197dd85ea
+MISC ChangeLog 327 RMD160 8be745eb0b5ae76541a2cd04b4ada9c1fe717f62 SHA1 6c90adc4c6aa24c70a79a1bcda74ed36ee6419e2 SHA256 f82d2785f599edf688fadbe52db4033f41dc2200441e487053ea3612f3e63ab6
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
